# savant-bot

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  protocol.config.yaml
dev/: LEARNINGS.md
dev/docs/: Discord Bot Architecture Analysis.md
dev/fids/archive/: FID-2026-0616-001-config-threshold-override.md  FID-2026-0616-002-astrobot-prompt-injection.md  FID-2026-0616-003-src-commands-layout.md  FID-2026-0616-004-temp-punishment-poller.md  FID-2026-0616-005-llm-defer-then-edit.md  FID-2026-0616-006-llm-rate-limiter.md  FID-2026-0616-007-llm-context-window.md  FID-2026-0616-008-llm-provider-trait.md  FID-2026-0616-009-bot-token-env-handling.md  FID-2026-0616-010-cargo-baseline-skeleton.md  FID-2026-0616-011-v0.0.2-release.md  FID-2026-0616-012-AGENTS.md
migrations/: 0001_init.sql
research/: .AGENT-NOTES.md
scripts/: release-v0.0.2.ps1
src/: config.rs  data.rs  error.rs  lib.rs  main.rs
src/commands/: ask.rs  mod.rs  mute.rs  ping.rs
src/db/: mod.rs
src/llm/: context.rs  defer.rs  mod.rs  provider.rs  rate_limit.rs
src/moderation/: cases.rs  mod.rs  poller.rs
