[package]
name = "savant-bot"
version = "0.0.1"
edition = "2021"
description = "Savant ecosystem Discord bot — Rust-native, Poise/Serenity"
license = "MIT"

[dependencies]
# Discord
poise = "0.6"
serenity = { version = "0.12", default-features = false, features = ["rustls_backend"] }
# Async runtime
tokio = { version = "1", features = ["full"] }
# Error handling
thiserror = "1"
anyhow = "1"
# Env loading
dotenvy = "0.15"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Database (used in BotError::Database; sqlx is wired even if no queries yet)
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "uuid"] }
# Time
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
# IDs
uuid = { version = "1", features = ["v4", "serde"] }
# HTTP + JSON for LLM provider (FID-008)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Rate limiting for LLM calls (FID-006)
governor = "0.7"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
